--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
