--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^18.3.1",
