--- a/react/package.json
+++ b/react/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^8.0.1",
-    "@mantine/hooks": "^8.0.1",
+    "@mantine/core": "^8.0.2",
+    "@mantine/hooks": "^8.0.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tabler/icons-react": "^3.33.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^18.3.1",
