--- a/react2/package.json
+++ b/react2/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mantine/core": "^8.0.2",
+    "@mantine/form": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
+    "@mantine/notifications": "^8.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
