--- a/react2/package.json
+++ b/react2/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
+    "@tabler/icons-react": "^3.34.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
