--- a/student/package.json
+++ b/student/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
+    "@mantine/styles": "^6.0.22",
     "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.34.0",
     "react": "^19.1.0",
