--- a/student/package.json
+++ b/student/package.json
@@ -23,7 +23,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
