--- a/student/package.json
+++ b/student/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@mantine/core": "^8.1.0",
+    "@mantine/core": "^8.1.1",
+    "@mantine/dates": "^8.1.1",
     "@mantine/form": "^8.0.2",
-    "@mantine/hooks": "^8.1.0",
-    "@mantine/notifications": "^8.1.0",
+    "@mantine/hooks": "^8.1.1",
+    "@mantine/notifications": "^8.1.1",
     "@mantine/styles": "^6.0.22",
     "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.34.0",
+    "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
