--- a/student/package.json
+++ b/student/package.json
@@ -19,6 +19,9 @@
     "@mantine/styles": "^6.0.22",
     "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.2",
+    "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
